Added mov(e)ing platforms

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,3 +85,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.bIsGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
++PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.isGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
