--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Scenes/MainMap.MainMap
+EditorStartupMap=/Game/Scenes/MainMap.MainMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -89,3 +90,4 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.bIsGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
 +PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.isGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
+
