The bridge holds up and colors itself

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,4 +90,5 @@ ManualIPAddress=
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.bIsGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
 +PropertyRedirects=(OldName="/Script/BallPlateformer.BA_Ball.isGrounded",NewName="/Script/BallPlateformer.BA_Ball.IsGrounded")
++PropertyRedirects=(OldName="/Script/BallPlateformer.BP_Connector.StretchValue",NewName="/Script/BallPlateformer.BP_Connector.Stiffness")
 
